# Sable_Slopper

./: .gitignore  AGENTS.md  CLAUDE.md  CLIP_LESSONS.md  FACE_SWAP_LESSONS.md  OpTODO.md  README.md  TODO.md  claudit.md  codit.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  DEPLOY.md  sable-serve.service  sable-weekly.service  sable-weekly.timer  setup-vps.sh  smoke-test.sh
deploy/logrotate.d/: sable-serve
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_HISTORY.md  COMMANDS.md  CONFIG_REFERENCE.md  ENV_VARS.md  FACE_LOCAL_SETUP.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_QUEUE.md  IMPLEMENTATION_REPORT.md  LOCAL_DEV.md  PROMPTS.md  PULSE_META.md  QA_WORKFLOW.md  ROADMAP.md  ROLES.md  SCHEMA_INVENTORY.md  THREAT_MODEL.md  TODO_product_review.md
sable/: __init__.py  cli.py  config.py
sable/advise/: generate.py  stage1.py  stage2.py  template_fallback.py
sable/cadence/: cli.py  combine.py  signals.py  store.py
sable/calendar/: planner.py
sable/character_explainer/: __init__.py  characters.py  cli.py  config.py  phonetics.py  pipeline.py  script.py  subtitles.py  talking_head.py  thumbnail.py
sable/churn/: __init__.py  cli.py  interventions.py  prompts.py
sable/clip/: assembler.py  brainrot.py  captions.py  cli.py  face_track.py  review.py  selector.py  thumbnail.py  thumbnail_prompt_guide.md  transcribe.py
sable/commands/: advise.py  calendar.py  diagnose.py  onboard.py  playbook.py  score.py  tracking.py  write.py
sable/diagnose/: runner.py
sable/face/: cli.py  cost.py  library.py  optimize.py  safety.py  swapper.py  video.py
sable/lexicon/: __init__.py  cli.py  scanner.py  store.py  writer.py
sable/meme/: bank.py  cli.py  fonts.py  generator.py  renderer.py  templates.py
sable/narrative/: cli.py  models.py  tracker.py
sable/onboard/: orchestrator.py
sable/platform/: artifacts.py  cli.py  cost.py  db.py  discord_pulse.py  entities.py  errors.py  jobs.py  merge.py  outcomes.py  stale.py  tags.py
sable/pulse/: account_report.py  attribution.py  cli.py  db.py  exporter.py  feedback.py  linker.py  outcomes.py  recommender.py  reporter.py  scorer.py  tracker.py  trends.py
sable/roster/: cli.py  manager.py  models.py  profiles.py
sable/serve/: __init__.py  app.py  auth.py  deps.py  rate_limit.py
sable/shared/: api.py  download.py  ffmpeg.py  files.py  handles.py  logging.py  paths.py  pricing.py  retry.py  socialdata.py  terminal.py
sable/style/: cli.py  delta.py  fingerprint.py  report.py
sable/vault/: __init__.py  assign.py  cli.py  config.py  dashboard.py  enrich.py  export.py  gaps.py  init.py  log.py  notes.py  permissions.py  platform_sync.py  search.py  suggest.py  sync.py  topics.py  voices.py
sable/weekly/: cli.py  cron.py  runner.py
sable/wojak/: __init__.py  cli.py  compositor.py  generator.py  library.py
sable/write/: generator.py  scorer.py
scripts/: fetch_brainrot_assets.py  score_brainrot.py  setup_brainrot.sh  trim_brainrot.py
tests/: conftest.py  test_assembler.py  test_brainrot.py  test_character_explainer.py  test_cli_config.py  test_cost_observability.py  test_generators.py  test_profiles.py  test_pulse_db.py  test_pulse_meta.py  test_renderer.py  test_roster.py  test_scanner_budget.py  test_schema_versioning.py  test_scorer.py  test_selector.py  test_shared_utils.py  test_transcribe.py  test_wojak_library.py
tests/advise/: conftest.py  test_advise.py  test_bridge_section.py  test_community_language.py  test_generate_orchestration.py  test_org_flag.py  test_sample_disclosure.py  test_stage1.py
tests/cadence/: test_cli.py  test_combine.py  (+2 more)
(+191 files in other folders)
